changed components to follow forms

--- a/locket/src/app/upload/upload.component.html
+++ b/locket/src/app/upload/upload.component.html
@@ -1,3 +1,10 @@
 <div>
-    <input #uploader type="file" (change)="uploadFile(uploader.files)" />
+    <form>
+        <div>
+            <input #uploader multiple name="file" type="file" (change)="uploadFile(uploader.files)" />
+        </div>
+        <div>
+            <button [disabled]="!this.filesUploaded" type="submit" (click)="sendFiles($event)">Upload</button>
+        </div>
+    </form>
 </div>
