--- a/locket/src/app/locket/locket.component.html
+++ b/locket/src/app/locket/locket.component.html
@@ -7,13 +7,16 @@
             <textarea #textAreaInput name="encryption" type="text" rows="5"
                 (input)="onTextEnter(textAreaInput.value)"></textarea>
             <br />
-            <button type="submit" [disabled]="textValue.length < 5" (click)="textSubmit($event)">Encrypt and
+            <div *ngIf="textValue.length < 5">
+            </div>
+            <button class="submit-button" type="submit" [disabled]="textValue.length < 5"
+                (click)="textSubmit($event)">Encrypt and
                 send</button>
         </form>
         <br />
         <div *ngIf="encryptedTextObject">
             <h4>Encrypted text:
-                <pre><code> {{ encryptedTextObject | json }}</code></pre>
+                <pre><code class="code-font">{{ encryptedTextObject | json }}</code></pre>
             </h4>
         </div>
 
