--- a/locket/src/app/locket/locket.component.html
+++ b/locket/src/app/locket/locket.component.html
@@ -1,17 +1,19 @@
-<div>
+<div class="locket-container">
     <app-upload></app-upload>
     <div>
         <form>
-            <label for="encryption">Text</label>
+            <label class="encryption-label" for="encryption">Enter your thoughts</label>
             <br />
-            <textarea #textAreaInput name="encryption" type="text" rows="5"
+            <textarea class="text-input" #textAreaInput name="encryption" type="text"
                 (input)="onTextEnter(textAreaInput.value)"></textarea>
             <br />
             <div *ngIf="textValue.length < 5">
             </div>
             <button class="submit-button" type="submit" [disabled]="textValue.length < 5"
-                (click)="textSubmit($event)">Encrypt and
-                send</button>
+                (click)="textSubmit($event)"><span><img class="encrypt-icon" src="../../assets/lock.png" /></span>
+                <div class="encrypt-text">Encrypt and
+                    send</div>
+            </button>
         </form>
         <br />
         <div *ngIf="encryptedTextObject">
