--- a/locket/src/app/upload/upload.component.scss
+++ b/locket/src/app/upload/upload.component.scss
@@ -42,6 +42,14 @@
     bottom: 5px;
 }
 
+.limit-text {
+    position: relative;
+    display: inline;
+    left: 25px;
+    font-size: x-small;
+    color: rgb(187, 4, 4);
+}
+
 .upload-list {
     list-style: none;
     display: inline-block;
