--- a/locket/src/styles.scss
+++ b/locket/src/styles.scss
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap');
 
+
+
 body {
+    margin: 0;
+    margin-top: 10px;
     background-color: rgb(17, 17, 17);
     color: white;
     font-family: 'Raleway', sans-serif;
