add new texts component to display

--- a/locket/src/app/locket/locket.component.html
+++ b/locket/src/app/locket/locket.component.html
@@ -22,6 +22,6 @@
                 <pre class="encrypted-text-json"><code>{{ encryptedTextObject | json }}</code></pre>
             </h4>
         </div>
-
     </div>
+    <app-texts></app-texts>
 </div>
