--- a/locket/src/app/texts/texts.component.html
+++ b/locket/src/app/texts/texts.component.html
@@ -1,1 +1,5 @@
-<p>texts works!</p>
+<app-text></app-text>
+<app-text></app-text>
+<app-text></app-text>
+<app-text></app-text>
+<app-text></app-text>
