--- a/locket/src/app/texts/texts.component.html
+++ b/locket/src/app/texts/texts.component.html
@@ -1,5 +1,3 @@
-<app-text></app-text>
-<app-text></app-text>
-<app-text></app-text>
-<app-text></app-text>
-<app-text></app-text>
+<li *ngFor="let text of encryptedTexts">
+    <app-text [text]="text"></app-text>
+</li>
