proper tags and visual tweaks

--- a/locket/src/app/text/text.component.html
+++ b/locket/src/app/text/text.component.html
@@ -1,1 +1,5 @@
-<p>{{ text._id }}</p>
+<div class="text-container">
+    <div class="text-id">
+        <p><code>{{ text._id }}</code><span class="menu">☰</span></p>
+    </div>
+</div>
