--- a/locket/src/app/locket/locket.component.html
+++ b/locket/src/app/locket/locket.component.html
@@ -17,11 +17,11 @@
             </button>
         </form>
         <br />
-        <div class="encrypted-text-object" *ngIf="encryptedTextObject">
+        <!-- <div class="encrypted-text-object" *ngIf="encryptedTextObject">
             <h4>Encrypted text:
                 <pre class="encrypted-text-json"><code>{{ encryptedTextObject | json }}</code></pre>
             </h4>
-        </div>
+        </div> -->
     </div>
     <app-texts></app-texts>
 </div>
