--- a/locket/src/app/texts/texts.component.html
+++ b/locket/src/app/texts/texts.component.html
@@ -1,3 +1,3 @@
-<li *ngFor="let text of encryptedTexts">
+<div *ngFor="let text of encryptedTexts">
     <app-text [text]="text"></app-text>
-</li>
+</div>
