--- a/locket/src/app/text/text.component.html
+++ b/locket/src/app/text/text.component.html
@@ -1,5 +1,5 @@
 <div class="text-container">
     <div class="text-id">
-        <p><code>{{ text._id }}</code><span class="menu">☰</span></p>
+        <p><code>{{ text._id }}</code><span (click)="deleteText(text._id)" class="menu">☰</span></p>
     </div>
 </div>
