--- a/locket/src/app/upload/upload.component.html
+++ b/locket/src/app/upload/upload.component.html
@@ -1,5 +1,5 @@
 <div class="upload-container">
-    <form>
+    <form [formGroup]="">
         <div>
             <label for="upload-button" class="custom-upload-button">
                 <span><img class="upload-file-icon" src="../../assets/upload-file.png" /></span>Custom Upload
